fix (index.html): Fixed typo in class name

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                     name="institution-of-st-petersburg"
                     value="true"
                     type="checkbox"
-                    class="inpt__item input__item_type_checkbox"
+                    class="input__item input__item_type_checkbox"
                   />
                   <span class="input__text">Высшее учебное заведение Санкт-Петербурга</span>
                 </label>
@@ -75,7 +75,7 @@
                     name="magistracy"
                     value="true"
                     type="checkbox"
-                    class="inpt__item input__item_type_checkbox"
+                    class="input__item input__item_type_checkbox"
                     checked
                   />
                   <span class="input__text">Магистратура учебного заведения</span>
